<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/button"
        android:title="@string/AddButton"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/button2"
        android:title="@string/Filter"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/button3"
        android:title="@string/Fridge"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/search"
        android:orderInCategory="5"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

</menu>
