<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_ingr_edit"
    tools:context=".EditIngrAddActivity">

    <TextView
        android:id="@+id/edit_ingr_name_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ingr_add_toolbar"
        android:text="@string/RecipeName"
        android:paddingTop="10dp"
        style="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:id="@+id/edit_ingr_name_edit"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingr_name_hint"
        android:layout_below="@id/edit_ingr_add_toolbar"
        android:layout_toRightOf="@+id/edit_ingr_name_label"
        android:layout_toEndOf="@+id/edit_ingr_name_label"
        />

    <TextView
        android:id="@+id/edit_ingr_unit_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ingr_name_edit"
        android:text="@string/ingrunit"
        android:paddingTop="10dp"
        style="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:id="@+id/edit_ingr_unit_edit"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingr_unit_hint"
        android:layout_below="@id/edit_ingr_name_edit"
        android:layout_toRightOf="@+id/edit_ingr_unit_label"
        android:layout_toEndOf="@+id/edit_ingr_unit_label"
        />

    <TextView
        android:id="@+id/edit_ingr_cost_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ingr_unit_edit"
        android:text="@string/ingrcost"
        android:paddingTop="10dp"
        style="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:id="@+id/edit_ingr_cost_edit"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingr_cost_hint"
        android:layout_below="@id/edit_ingr_unit_edit"
        android:layout_toRightOf="@+id/edit_ingr_cost_label"
        android:layout_toEndOf="@+id/edit_ingr_cost_label"
        />

    <TextView
        android:id="@+id/edit_ingr_amount_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ingr_cost_edit"
        android:text="@string/ingramount"
        android:paddingTop="10dp"
        style="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:id="@+id/edit_ingr_amount_edit"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingr_amount_hint"
        android:layout_below="@id/edit_ingr_cost_edit"
        android:layout_toRightOf="@+id/edit_ingr_amount_label"
        android:layout_toEndOf="@+id/edit_ingr_amount_label"
        />

</RelativeLayout>