<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:showIn="@layout/activity_add_recipe"
        tools:context="com.example.owner1.pocketchef.AddRecipeActivity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photodisc"
            android:id="@+id/add_image"
            android:src="@drawable/loading"
            />

        <TextView
            android:layout_below="@id/add_image"
            android:layout_alignLeft="@id/add_image"
            android:layout_alignStart="@id/add_image"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/url"
            android:id="@+id/url_text"
            android:paddingTop="10dp"
            />

        <EditText
            android:inputType="text"
            android:hint="@string/url_hint"
            android:layout_alignTop="@id/url_text"
            android:layout_toRightOf="@id/url_text"
            android:layout_toEndOf="@id/url_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/u_edit"
            />

        <TextView
            android:layout_below="@id/u_edit"
            android:layout_alignLeft="@id/add_image"
            android:layout_alignStart="@id/add_image"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/RecipeName"
            android:id="@+id/name_label"
            android:paddingTop="10dp"
            />

        <EditText
            android:inputType="text"
            android:hint="@string/name_hint"
            android:layout_alignTop="@id/name_label"
            android:layout_toRightOf="@id/name_label"
            android:layout_toEndOf="@id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_edit"
            />

        <TextView
            android:layout_below="@id/name_edit"
            android:layout_alignLeft="@id/add_image"
            android:layout_alignStart="@id/add_image"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Ingredientes"
            android:id="@+id/ingr_label"
            android:paddingTop="10dp"
            />

        <TextView
            android:text="@string/none"
            android:layout_alignTop="@id/ingr_label"
            android:layout_toRightOf="@id/ingr_label"
            android:layout_toEndOf="@id/ingr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/ingr_list"
            android:paddingTop="10dp"
            />

        <Button
            android:text="@string/AddIngrTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingr_list"
            android:layout_toRightOf="@id/ingr_label"
            android:layout_toEndOf="@id/ingr_label"
            android:id="@+id/ingr_button"
            />

        <TextView
            android:layout_below="@id/ingr_button"
            android:layout_alignLeft="@id/add_image"
            android:layout_alignStart="@id/add_image"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PrepTime"
            android:id="@+id/prep_label"
            android:paddingTop="10dp"
            />

        <EditText
            android:inputType="numberDecimal"
            android:hint="@string/prep_hint"
            android:layout_alignTop="@id/prep_label"
            android:layout_toRightOf="@id/prep_label"
            android:layout_toEndOf="@id/prep_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prep_edit"
            />

        <TextView
            android:layout_below="@id/prep_edit"
            android:layout_alignLeft="@id/add_image"
            android:layout_alignStart="@id/add_image"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Appliances"
            android:id="@+id/app_label"
            android:paddingTop="10dp"
            />

        <EditText
            android:inputType="text"
            android:hint="@string/app_hint"
            android:layout_alignTop="@id/app_label"
            android:layout_toRightOf="@id/app_label"
            android:layout_toEndOf="@id/app_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app_edit"
            />

        <TextView
            android:layout_below="@id/app_edit"
            android:layout_alignLeft="@id/add_image"
            android:layout_alignStart="@id/add_image"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Instructions"
            android:id="@+id/inst_label"
            android:paddingTop="15dp"
            />

        <EditText
            android:inputType="textMultiLine"
            android:hint="@string/inst_hint"
            android:layout_alignTop="@id/inst_label"
            android:layout_toRightOf="@id/inst_label"
            android:layout_toEndOf="@id/inst_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inst_edit"
            />

    </RelativeLayout>
</ScrollView>
