<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_filter_menu"
    tools:context=".FilterMenu">

    <EditText
        android:id="@+id/edit_min_cost"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_toolbar"
        android:hint="@string/minhint"
        />

    <TextView
        android:id="@+id/text_cost"
        android:text="@string/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_toolbar"
        android:layout_toRightOf="@id/edit_min_cost"
        android:layout_toEndOf="@id/edit_min_cost"
        android:paddingTop="10dp"
        style="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:id="@+id/edit_max_cost"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_toolbar"
        android:layout_toRightOf="@id/text_cost"
        android:layout_toEndOf="@id/text_cost"
        android:hint="@string/maxhint"
        />

    <EditText
        android:id="@+id/edit_min_time"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_min_cost"
        android:hint="@string/minhint"
        />

    <TextView
        android:id="@+id/text_time"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_min_cost"
        android:layout_toRightOf="@id/edit_min_time"
        android:layout_toEndOf="@id/edit_min_time"
        android:paddingTop="10dp"
        style="?android:attr/textAppearanceLarge"
        />


    <EditText
        android:id="@+id/edit_max_time"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_min_cost"
        android:layout_toRightOf="@id/text_time"
        android:layout_toEndOf="@id/text_time"
        android:hint="@string/maxhint"
        />

    <ListView
        android:layout_below="@id/edit_min_time"
        android:id = "@+id/filter_list"
        android:choiceMode="multipleChoiceModal"
        android:listSelector="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceLarge"
        />

</RelativeLayout>